# djs_fhd_pipeline

./: README.md  README.txt  setup.cfg  setup.py
djs_fhd_pipeline/: __init__.py  plotBaselineLengthHistograms.ipynb  plot_deconvolution.py  plot_fits.py  plots.py  utils.py
plotScripts/: call_read_and_write_data.sh  flagInspect.ipynb  launch_read_and_write_data.sh  plotVisibilitiesAndImages.ipynb  plot_fits.py  plot_kxky_slices.pro  plot_uvf_cubes.pro  plot_vis.py  read_and_write_data.py
runScripts/: README.txt
runScripts/makeUvfits/: call_make_uvfits_apply_flags.sh  launch_make_uvfits_apply_flags.sh  launch_make_uvfits_apply_flags_array.sh  make_uvfits_with_flags.py
runScripts/runFHD/: Untitled.ipynb  run_fhd_h4c_arrayJob.py  run_fhd_h4c_singleObs.py  run_fhd_h6c_arrayJob.py  run_h4c_vivaldibeam.pro  run_h4c_vivaldibeam_deconvolve.pro  run_h4c_vivaldibeam_deconvolve_fromRuby.pro  run_h4c_vivaldibeam_versions.pro  run_h6c_thesis_run.pro  run_h6c_vivaldibeam_versions.pro  wrapper1_arrayJob.sh  wrapper1_singleObs.sh  wrapper2_arrayJob.sh  wrapper2_singleObs.sh
runScripts/runSSINS/: Run_HERA_SSINS.py  call_Run_HERA_SSINS.sh  launch_Run_HERA_SSINS.sh  launch_Run_HERA_SSINS_array.sh
