[metadata]
description-file = README.md

[tool:pytest]
addopts = --ignore=scripts

[flake8]
ignore = E501, W503, D400, D401, D406, D409, C408, D205, E722, E203, E266
# select = B,C,E,W,T4,B9,F,D,A,RST,N
max-line-length = 88
docstring-convention = numpy
per-file-ignores =
    __init__.py: F401
    hera_commissioning_tools/tests/*:D
    setup.py:D
rst-roles =
    class
    func
    mod
    data
    const
    meth
    attr
    exc
    obj
rst-directives =
    note
    warning
    versionadded
    versionchanged
    deprecated
    seealso
